--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,28 +1,74 @@
+body {
+  margin: 0;
+}
+
 .topnav {
-    overflow: hidden;
-    background-color: #333;
+  overflow: hidden;
+  background-color: #B9C6E1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #181143;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #2196F3;
+  color: white;
+}
+
+.topnav .search-container form {
+  display: flex;
+  border-radius: 4rem;
+  background-color: aliceblue;
+}
+
+.topnav input[type=text] {
+  font-size: 1.5rem;
+  border: none;
+ } 
+ 
+.topnav .search-container button {
+  float: right;
+  padding: 6px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.topnav .search-container button:hover {
+  background: #ccc;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav .search-container {
+    float: none;
   }
-  
-  .topnav a {
-    float: left;
+  .topnav a, .topnav input[type=text], .topnav .search-container button {
+    float: none;
     display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
   }
-  
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
+  .topnav input[type=text] {
+    border: 1px solid #ccc;  
   }
-  
-  .topnav a.active {
-    background-color: #04AA6D;
-    color: white;
-  }
-  
-  .topnav .icon {
-    display: none;
-  }
+} 
