--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -6,7 +6,7 @@ body {
   overflow: hidden;
   background-color: #B9C6E1;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
