--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,57 +1,99 @@
-body {
-    background-color: #bdbdbd;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: 0;
     font-family: sans-serif;
 }
 
-#childrens {
-    position: absolute;
+.content {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    min-height: 100vh;
+    background-color: #F4F5F5;
+}
+
+.childrens img{
+    height: 100vh;
+    padding: 0 6vw 0 0;
 }
 
 .loginbox {
     display: flex;
-    width: 100vh;
+    justify-content: center;
+    align-items: center;
+    width: 60vw;
     height: 100vh;
-    background-color: #ffffff;
-    position: absolute;
-    left: 50%;
-    box-sizing: border-box;
-    align-items: center;
+    background-color: #FFFFFF;
+    box-shadow: -22px 0px 15px rgba(0, 0, 0, 0.15);
 }
 
-.loginbox h1 {
+.loginbox h1{
+    font-size: 50px;
     text-align: center;
-    padding: 30px 0px 20px 0px;
+    padding: 0 0 20px 0;
 }
 
-.loginbox form {
-    padding: 0 100px;
-    box-sizing: border-box;
+.loginbox .user-login{
+    margin: 30px 0;
 }
 
-form .user {
-    position: relative;
-    margin: 20px 0;
+.loginbox .user-login input{
+    font-size: 35px;
+    padding: 0 10px;
+    width: 550px;
+    height: 75px;
+    border:3px solid #000;
+    border-radius: 7px;
 }
 
-form .user input {
-    width: 400px;
-    height: 35px;
-    align-items: center;
-}
-
-form .user input::placeholder {
+.loginbox .user-login input::placeholder{
+    font-size: 35px;
     text-align: center;
-    font-size: 15px;
 }
 
-#button {
+.loginbox .remember {
+    font-size: 20px;
+    margin: -20px 0 30px;
+    cursor: pointer;
+}
+
+.loginbox .remember input[type="checkbox"]:checked{
+    color: #9BB3E8;
+}
+
+.loginbox .login-btn {
+    display: flex;
+    justify-content: center;
+}
+
+.loginbox .login-btn button{
     color:#000;
     background-color: #9BB3E8;
-    margin: 0;
-    width: 30vh;
-    height: 30px;
-    border: 1px solid;
-    border-radius: 25px;
-    font-size: 18px;
+    width: 340px;
+    height: 85px;
+    border-radius: 40px;
+    font-size: 35px;
     font-weight: bold;
+    border: 4px solid #000;
+    cursor: pointer;
+}
+
+.loginbox .login-btn button:hover {
+    color:#fff;
+    background-color: #7a9edc;
+}
+
+.loginbox .forgot {
+    display: flex;
+    justify-content: center;
+    padding: 35px 0 0;
+    font-size: 25px;
+}
+
+.loginbox .signup {
+    display: flex;
+    justify-content: center;
+    padding: 10px 0 0;
+    font-size: 25px;
 }
