--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,136 +1,208 @@
 body {
     font-family: "DM Sans", sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.content {
-    display: flex;
-    justify-content: right;
-    align-items: center;
+.container {
     min-height: 100vh;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 40% 60%;
     background-color: #F4F5F5;
 }
 
-.childrens img{
-    height: 100vh;
-    padding-right: 6vw;
-}
-
-.loginbox {
+section {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 60vw;
+}
+
+.side {
+    width: 100%;
     height: 100vh;
-    background-color: #FFFFFF;
+    overflow: hidden;
+}
+.side img {
+    width: auto;
+    height: 80vh;
+}
+
+.main {
+    background-color: #ffffff;
     box-shadow: -1.5vw 0px 15px rgba(0, 0, 0, 0.15);
 }
 
-.loginbox h1{
-    font-size: 5vh;
-    text-align: center;
-    padding-bottom: 2.5vh;
+.loginbox {
+    max-width: 650px;
+    padding: 24px;
+    display: flex;
+    flex-direction:  column;
+    align-items: center;
 }
 
-.loginbox .user-login{
+.loginbox h1{
+    font-size: 3.4rem;
+    text-align: center;
+    padding-bottom: 4vh;
+}
+
+.login-form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin: 40px;
+}
+
+.user-login {
+    width: 100%;
+    position: relative;
+    margin-bottom: 24px;
     display: flex;
     justify-content: center;
-    align-items: center;
-    margin: 3vh 0;
 }
 
-.loginbox .user-login input{
-    font-size: 3.4vh;
-    padding: 0 10px;
-    width: 30vw;
-    height: 7vh;
-    border: 0.5vh solid #000;
+.user-login input{
+    font-size: 2.2rem;
+    padding: 8px 8px;
+    width: 95%;
+    border: 0.5vh solid #000; /**/
     border-radius: 7px;
 }
 
-.loginbox .user-login input::placeholder{
-    font-size: 3.4vh;
+.user-login input::placeholder{
+    font-size: 2.2rem;
     text-align: center;
 }
 
-.loginbox .remember {
+.remember {
     display: flex;
     justify-content: left;
-    font-size: 2.2vh;
-    margin: -2vh 0 3.5vh;
+    font-size: 1.2rem;
+    margin-top: -20px;
+    margin-left: 3%;
 }
 
-.loginbox .remember input[type="checkbox"]{
+.remember input[type="checkbox"]{
     position: relative;
     top: 0;
-    width: 2vh;
-    height: 2vh;
+    width: 1.5vh; /**/
+    height: 1.5vh; /**/
     appearance: none;
     outline:none;
-    transition: 0.5s;
+    transition: 0.5s; 
     cursor: pointer;
 }
 
-.loginbox .remember input[type="checkbox"]::before{
+.remember input[type="checkbox"]::before{
     content: "";
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    border: 0.4vh solid #000;
+    border: 0.35vh solid #000;
     box-sizing: border-box;
     transition: .5s;
 }
 
-.loginbox .remember input:checked[type="checkbox"]::before{
+.remember input:checked[type="checkbox"]::before{
     border-left: none;
     border-top: none;
-    width: 1vh;
+    width: 0.75vh;
     transform: rotate(45deg);
-    translate: (0.4vh, -0.4vh);
+    translate: (0.4vh, -0.4vh); /**/
     border-color: #7a9edc;
     transition: 0.5s;
 }
 
-.loginbox .login-btn {
+.login-btn {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.loginbox .login-btn button{
+.login-btn button{
     display: flex;
     justify-content: center;
     align-items: center;
     color:#000;
     background-color: #9bb3e8;
-    width: 18.3vw;
-    height: 8vh;
+    padding: 2.5% 12%;
+    margin: 32px auto;
     border-radius: 40px;
-    font-size: 3.5vh;
+    font-size: 2rem;
     font-weight: bold;
-    border: 0.4vh solid #000;
+    border: 4px solid #000;
     cursor: pointer;
 }
 
-.loginbox .login-btn button:hover {
+.login-btn button:hover {
     background-color: #7a9edc;
 }
 
-.loginbox .forgot {
+.forgot {
     display: flex;
     justify-content: center;
-    padding: 3vh 0 0;
-    font-size: 2.5vh;
+    font-size: 1.2rem;
 }
 
-.loginbox .signup {
+.signup {
     display: flex;
     justify-content: center;
-    padding: 1vh 0 0;
-    font-size: 2.5vh;
+    flex-direction: row;
+    font-size: 1.2rem;
 }
 
-.image {
-    height: 100vh;
+
+@media (max-width: 1024px) {
+    .main {
+        box-shadow: none;
+    }
+    .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #ffffff;
+    }
+
+    .loginbox {
+        width: 90%;
+    }
+
+    .loginbox h1{
+        font-size: 3rem
+    }
+    
+    .user-login input{
+        font-size: 1.5rem;
+    }
+    
+    .user-login input::placeholder{
+        font-size: 1.5rem;
+    }
+
+    .remember {
+        font-size: 1rem;
+    }
+    
+    .login-btn button{
+        font-size: 1.5rem;
+        font-weight: bold;
+        border: 2px solid #000;
+    }
+    
+    .forgot {
+        font-size: 1rem;
+        margin-bottom: 10px;
+    }
+    
+    .signup {
+        font-size: 1rem;
+    }
+
+    .side {
+        display: none;
+    }
 }
