--- a/public/css/book_show.css
+++ b/public/css/book_show.css
@@ -4,89 +4,116 @@ body {
 
 .container {
     min-height: 100vh;
-    display: flex;
-    margin-left: 5vw;
-    margin-top: 5vh;
+    display: grid;
+    grid-template-columns: 25% 75%;
+    margin-top: 3%;
+    margin-left: 5%;
 }
 
-.container .book-cover {
+.book-cover {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
 }
 
-.container .book-cover .cover img {
-    width: 50vh;
-    height: 60vh;
+.cover {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+}
+
+.cover img {
+    height: auto;
+    width: 100%;
     box-shadow: 1.5vw 0 15px rgba(0, 0, 0, 0.25);
 }
 
-.container .book-cover .available-btn button {
+.available-btn {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    height: 8%;
+    margin-top: 8%;
+}
+.available-btn button {
     display: flex;
     justify-content: center;
     align-items: center;
     color:#000;
+    height: 100%;
+    width: 100%;
     background-color: #ffbd46;
-    width: 45vh;
-    height: 8vh;
     border-radius: 40px;
-    font-size: 3.35vh;
+    font-size: 2rem;
     font-weight: bold;
     border: none;
     cursor: pointer;
-    margin-top: 2.5vh;
 }
 
-.container .book-cover .available-btn button:hover {
+.available-btn button:hover {
     color:#000;
     background-color: #e4a83a;
 }
 
-.container .book-cover .add-list-btn button {
+.add-list-btn {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    height: 8%;
+    margin-top: 8%;
+}
+.add-list-btn button {
     display: flex;
     justify-content: center;
     align-items: center;
     color:#000;
     background-color: #fff;
-    width: 45vh;
-    height: 8vh;
+    width: 100%;
+    height: 100%;
     border-radius: 40px;
-    font-size: 3.35vh;
+    font-size: 2rem;
     font-weight: bold;
-    border: 0.7vh solid #ffbd46;
+    border: 6px solid #ffbd46;
     cursor: pointer;
-    margin-top: 2.5vh;
 }
 
-.container .book-cover .add-list-btn button:hover {
+.add-list-btn button:hover {
     background-color:#dddbdb;   
 }
 
-.container .book-info {
+.book-info {
     display: flex;
     flex-direction: column;
     margin-left: 10vw;
-    margin-top: -3vh;
+    margin-top: -2.5%;
 }
 
-.container .book-info h1 {
+.book-info h1 {
     font-family: "Playfair Display";
-    font-size: 7.5vh;
+    font-size: 4.5rem;
     font-weight: 450;
 }
 
-.container .book-info .autors a {
+.autors a {
     color: #000;
-    font-size: 3.5vh;
+    font-size: 2rem;
     text-decoration: none;
 }
 
-.container .book-info .autors a:hover {
+.autors a:hover {
     text-decoration: underline;
 }
 
 .description {
-    margin-top: 5vh;
+    margin-top: 4.5%;
 }
 
 .description table{
@@ -94,27 +121,17 @@ body {
 }
 
 .description table th {
-    font-size: 3.3vh;
+    font-size: 1.9rem;
     font-weight: 500;
     text-align: left;
-    width: 20vw;
+    width: 20%;
 }
 
 .description table td {
-    font-size: 3.3vh;
+    font-size: 1.9rem;
     font-weight: 450;
     text-align: center;
     position: relative;
-}
-
-.description table .primary td::after {
-    content: '';
-    position: absolute;
-    bottom: 0; 
-    left: 50%;
-    transform: translateX(-50%);
-    width: 15%; 
-    border-bottom: 4px solid #ff0000;
 }
 
 .description table .secondary ul {
@@ -124,48 +141,27 @@ body {
 }
 
 .description table .secondary ul li {
-    font-size: 3.3vh;
+    font-size: 1.9rem;
     font-weight: 450;
     display: inline;
     position: relative;
 }
-
-.description table .secondary ul li::before {
-    content: '';
-    position: absolute;
-    bottom: 0; 
-    left: 50%;
-    transform: translateX(-50%);
-    width: 15%;
-    border-bottom: 4px solid #ff0000; 
-    z-index: -1; 
-  }
 
 .description table .secondary ul li:not(:last-child)::after {
     content: ', '; 
     display: inline;
 }
 
-.description table .primary td::after {
-    content: '';
-    position: absolute;
-    bottom: 0; /* Alinea el subrayado en la parte inferior de la celda */
-    left: 50%;
-    transform: translateX(-50%);
-    width: 15%; 
-    border-bottom: 4px solid #ff0000; /* Ajusta el grosor y color según prefieras */
-  }
-
 .this-edition {
-    margin-top: 5vh;
+    margin-top: 4.5%;
     display: flex;
     flex-direction: column;
 }
 
 .this-edition h2 {
-    font-size: 3.5vh;
+    font-size: 2rem;
     font-family: "Playfair Display";
-    margin-bottom: 2.2vh;
+    margin-bottom: 2.5%;
 }
 
 .this-edition table {
@@ -175,15 +171,16 @@ body {
 
 .this-edition table th {
     text-align: left;
-    font-size: 3.1vh;
+    font-size: 1.9rem;
     font-weight: 500;
     width: 70%;
 }
 
 .this-edition table td {
-    font-size: 3.1vh;
+    font-size: 1.9rem;
     font-weight: 450;
 }
+
 
 .admin-view {
     display: flex;
@@ -191,31 +188,196 @@ body {
     align-items: center;
 }
 .admin-view h2{
-    font-size: 3vh;
+    font-size: 2rem;
 }
 
-.admin-view .admin-btn{
+.admin-btn{
     display: flex;
 }
 
-.admin-view .admin-btn a{
+.admin-btn a{
     display: flex;
     justify-content: center;
     align-items: center;
     color:#000;
     background-color: #ffbd46;
-    width: 20vh;
-    height: 6vh;
+    width: 100%;
+    height: 100%;
     border-radius: 40px;
-    font-size: 2.5vh;
+    font-size: 1.7rem;
     font-weight: bold;
     text-decoration: none;
     border: none;
     cursor: pointer;
-    margin: 2vh 2vw;
+    padding: 12px 65px;
+    margin: 20px 20px;
 }
 
-.admin-view .admin-btn a:hover {
+.admin-btn a:hover {
     color:#000;
     background-color: #e4a83a;
+}
+
+@media (max-width: 1024px) {
+    .container {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #ffffff;
+        margin-top: 8%;
+        margin-left: 0;
+    }
+
+    .cover {
+        width: 70%;
+        height: auto;
+    }
+
+    .available-btn, .add-list-btn {
+        width: 70%;
+        min-width: 240px;
+        height: 8%;
+        min-height: 40px;
+        margin-top: 4%;
+    }
+
+    .available-btn button, .add-list-btn button {
+        font-size: 1.20rem;
+    }
+    .book-info {
+        margin-top: 20%;
+    }
+
+    .book-info h1 {
+        font-size: 4rem;
+    }
+    
+    .autors a {
+        font-size: 1.8rem;
+        line-height: 1;
+    }
+
+    .description table th {
+        font-size: 1rem;
+        width: 30%;
+    }
+    
+    .description table td {
+        font-size: 1rem;
+    }
+
+    .description table .secondary ul li {
+        font-size: 1rem;
+    }
+
+    .this-edition {
+        margin-bottom: 10vh;
+    }
+
+    .this-edition h2 {
+        font-size: 1.2rem;
+    }
+        
+    .this-edition table th {
+        font-size: 1rem;
+        width: 35%;
+    }
+    
+    .this-edition table td {
+        font-size: 1rem;
+    }
+
+    .admin-view {
+        display: none;
+    }
+
+}
+
+@media (max-height: 600px) {
+    .container {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #ffffff;
+        margin-top: 4%;
+        margin-left: 0;
+    }
+
+    .book-cover {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+    .cover {
+        width: auto;
+        height: 100%;
+    }
+
+    .cover img {
+        width: 30vw;
+    }
+
+
+    .available-btn, .add-list-btn {
+        width: 25%;
+        min-width: 240px;
+        height: 8%;
+        min-height: 40px;
+        margin-top: 2%;
+    }
+
+    .available-btn button, .add-list-btn button {
+        font-size: 1.25rem;
+        padding: 5%;
+    }
+    .book-info {
+        margin-top: 10%;
+    }
+
+    .book-info h1 {
+        font-size: 5rem;
+    }
+    
+    .autors a {
+        font-size: 2rem;
+        line-height: 1;
+    }
+
+    .description table th {
+        font-size: 1.5rem;
+        width: 30%;
+    }
+    
+    .description table td {
+        font-size: 1.5rem;
+    }
+
+    .description table .secondary ul li {
+        font-size: 1.5rem;
+    }
+    .this-edition {
+        margin-bottom: 10vh;
+    }
+
+    .this-edition h2 {
+        font-size: 1.8rem;
+    }
+        
+    .this-edition table th {
+        font-size: 1.5rem;
+        width: 35%;
+    }
+    
+    .this-edition table td {
+        font-size: 1.5rem;
+    }
+
+    .admin-view {
+        display: none;
+    }
 }
