--- a/public/css/index.css
+++ b/public/css/index.css
@@ -25,14 +25,14 @@ body {
     flex-direction: column;    
 }
 .container .content .tittle h2{
-    font-size: 3vh;
+    font-size: 2rem;
     font-weight: 550;
     margin-left: 5vw;
     margin-bottom: -2.5vw;
 }
 
 .container .content .tittle h1{
-    font-size: 6.5vw;
+    font-size: 8rem;
     margin-bottom: -2.6vw;
 }
 
@@ -40,7 +40,7 @@ body {
     margin-top: 4vw;
     display: flex;
     align-items: flex-start;
-    font-size: 2vw;
+    font-size: 2.5rem;
     font-weight: 800;
     margin: 6vh 0 -3vh 0;
     line-height: 1.25;
