--- a/public/css/login.css
+++ b/public/css/login.css
@@ -67,7 +67,7 @@ section {
     font-size: 2.2rem;
     padding: 8px 8px;
     width: 95%;
-    border: 0.5vh solid #000; /**/
+    border: 4px solid #000;
     border-radius: 7px;
 }
 
@@ -87,8 +87,8 @@ section {
 .remember input[type="checkbox"]{
     position: relative;
     top: 0;
-    width: 1.5vh; /**/
-    height: 1.5vh; /**/
+    width: 16px; 
+    height: 16px; 
     appearance: none;
     outline:none;
     transition: 0.5s; 
@@ -102,7 +102,7 @@ section {
     left: 0;
     width: 100%;
     height: 100%;
-    border: 0.35vh solid #000;
+    border: 2.9px solid #000;
     box-sizing: border-box;
     transition: .5s;
 }
@@ -110,9 +110,9 @@ section {
 .remember input:checked[type="checkbox"]::before{
     border-left: none;
     border-top: none;
-    width: 0.75vh;
+    width: 8px;
     transform: rotate(45deg);
-    translate: (0.4vh, -0.4vh); /**/
+    translate: (0.4vh, -0.4vh);
     border-color: #7a9edc;
     transition: 0.5s;
 }
@@ -177,6 +177,7 @@ section {
     
     .user-login input{
         font-size: 1.5rem;
+        border: 3px solid black;
     }
     
     .user-login input::placeholder{
