--- a/public/css/book_show.css
+++ b/public/css/book_show.css
@@ -186,6 +186,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 10%;
 }
 .admin-view h2{
     font-size: 2rem;
@@ -195,7 +196,7 @@ body {
     display: flex;
 }
 
-.admin-btn a{
+#edit-btn {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -213,9 +214,31 @@ body {
     margin: 20px 20px;
 }
 
-.admin-btn a:hover {
+#edit-btn:hover {
     color:#000;
     background-color: #e4a83a;
+}
+
+#delete-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    background-color: #ad0f10;
+    width: 100%;
+    height: 100%;
+    border-radius: 40px;
+    font-size: 1.7rem;
+    font-weight: bold;
+    text-decoration: none;
+    border: none;
+    cursor: pointer;
+    padding: 12px 65px;
+    margin: 20px 20px;
+}
+
+#delete-btn:hover {
+    background-color: #a52626;
 }
 
 @media (max-width: 1024px) {
@@ -293,7 +316,7 @@ body {
         font-size: 1.35rem;
     }
     
-    .admin-btn a {
+    #delete-btn, #edit-btn{
         font-size: 1rem;
         padding: 12px 30px;
     }
