--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,74 +1,207 @@
 body {
-  margin: 0;
+    margin: 0;
 }
 
 .topnav {
-  overflow: hidden;
-  background-color: #B9C6E1;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+    overflow: hidden;
+    background-color: #99b1e5;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1.5rem;
+    height: 6rem;
+    box-sizing: border-box;
+}
+
+.topnav img {
+    max-width: 70px;
+    height: auto;
+}
+
+.topnav form select {
+    border-radius: 3rem;
+    height: 100%;
 }
 
 .topnav a {
-  float: left;
-  display: block;
-  color: #181143;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
+    display: block;
+    color: #181143;
+    text-align: center;
+    padding: 0 8px;
+    text-decoration: none;
+    transition: background-color 0.3s;
 }
 
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
+.topnav .nav-link {
+    font-size: 1.4em;
+    font-weight: bold;
+}
+
+.topnav .nav-link:hover {
+    background-color: #ddd;
+    color: black;
+    border-radius: 3rem;
 }
 
 .topnav a.active {
-  background-color: #2196F3;
-  color: white;
+    background-color: #2196f3;
+    color: white;
 }
 
-.topnav .search-container form {
-  display: flex;
-  border-radius: 4rem;
-  background-color: aliceblue;
+.search-container {
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    align-items: center;
 }
 
-.topnav input[type=text] {
-  font-size: 1.5rem;
-  border: none;
- } 
- 
-.topnav .search-container button {
-  float: right;
-  padding: 6px;
-  margin-top: 8px;
-  margin-right: 16px;
-  background: #ddd;
-  font-size: 17px;
-  border: none;
-  cursor: pointer;
-}
-
-.topnav .search-container button:hover {
-  background: #ccc;
-}
-
-@media screen and (max-width: 600px) {
-  .topnav .search-container {
-    float: none;
-  }
-  .topnav a, .topnav input[type=text], .topnav .search-container button {
-    float: none;
-    display: block;
-    text-align: left;
+.search-container form {
+    display: flex;
     width: 100%;
-    margin: 0;
-    padding: 14px;
-  }
-  .topnav input[type=text] {
-    border: 1px solid #ccc;  
-  }
-} 
+    max-width: 600px;
+    border-radius: 3rem;
+    background-color: aliceblue;
+    padding: 0.5rem;
+}
+
+.search-selector {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.search-selector select {
+    -webkit-appearance: none;
+    appearance: none;
+    padding: 0.5rem 1rem;
+    border-radius: 3rem;
+    border: none;
+    background-color: #181143;
+    color: white;
+    cursor: pointer;
+    font-size: 1.15rem;
+}
+
+.topnav input[type="text"] {
+    flex-grow: 1;
+    font-size: 1.2rem;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 3rem;
+    margin-left: 0.5rem;
+}
+
+.search-container button {
+    background: none;
+    border: none;
+    border-radius: 3rem;
+    padding: 0;
+    margin-left: 0.5rem;
+    cursor: pointer;
+}
+
+.search-container button:hover {
+    background: #ccc;
+}
+
+.search-container button svg {
+    fill: #181143;
+}
+
+.user-links {
+    display: flex;
+    gap: 1rem;
+}
+
+.nav-link {
+    font-size: 1.2rem;
+    color: #181143;
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    border-radius: 3rem;
+    transition: background-color 0.3s;
+    align-content: center;
+}
+
+.nav-link:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.menu-icon {
+    padding: 0 8px;
+    display: block;
+    position: relative;
+}
+
+/* Para el menú desplegable */
+.dropdown-menu {
+    display: none;
+    position: absolute;
+    top: 6rem; /* Ajusta según la altura de tu navbar */
+    right: 1.5rem;
+    background-color: #99b1e5;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    flex-direction: column;
+    z-index: 1;
+}
+
+.dropdown-menu a {
+    padding: 10px 20px;
+    color: #181143;
+    text-align: center;
+    text-decoration: none;
+}
+
+.dropdown-menu a:hover {
+    background-color: #ddd;
+}
+
+/* Mostrar el menú desplegable cuando esté activo */
+.menu-icon.active + .dropdown-menu {
+    display: flex;
+}
+
+/* Para pantallas pequeñas (menores a 768px) */
+@media screen and (max-width: 768px) {
+    .menu-toggle {
+        background: none;
+        border: none;
+        cursor: pointer;
+        padding: 0;
+    }
+
+    .user-links {
+        display: none;
+    }
+
+    .menu-icon {
+        display: block;
+    }
+}
+
+/* Para pantallas grandes (mayores a 768px) */
+@media screen and (min-width: 769px) {
+    .menu-icon {
+        display: none;
+    }
+
+    .dropdown-menu {
+        display: none !important; /* Asegura que el dropdown no aparezca en pantallas grandes */
+    }
+}
+
+@media screen and (max-width: 600px){
+    .topnav {
+      padding: 0 0.5rem;
+    }
+
+    .topnav img {
+      padding: 0;
+    }
+
+    .search-selector {
+      display: none;
+    }
+}
