--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -10,6 +10,7 @@
 }
 
 body {
+  font-family: "DM Sans", Arial, Helvetica, sans-serif;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
