--- a/public/css/book_form.css
+++ b/public/css/book_form.css
@@ -36,9 +36,8 @@ body {
 
 .field {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    align-items: first baseline;
     width: 80%;
     padding: 0 5%;
     margin-bottom: 2%;
@@ -54,9 +53,8 @@ body {
 
 .author-field-group {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    align-items: first baseline;
     width: 100%;
     margin-bottom: 3%;
 }
@@ -71,9 +69,8 @@ body {
 
 .desc-field-group {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    align-items: first baseline;
     width: 100%;
     margin-bottom: 3%;
 }
@@ -85,7 +82,7 @@ label {
 input{
     font-size: 1.35rem;
     padding: 8px;
-    width: 40%;
+    width: 100%;
     height: 10%;
     border: 3.5px solid #000;
     border-radius: 7px;
@@ -93,9 +90,8 @@ input{
 
 .field-group {
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: first baseline;
     width: 100%;
     margin-bottom: 2%;
     position: relative;
@@ -107,31 +103,44 @@ input{
 }
 
 .trash-btn {
-    background-color: transparent;
-    background-image: url('../images/book/trash.svg');
-    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 35px;
     height: 35px;
     position: absolute;
     top: 50%;
     right: 2%;
-    transform: translateY(-50%);
-    border: none;
+    transform: translateY(-5%);
     cursor: pointer;
 }
 
+.trash-btn svg {
+    height: 35px;
+    width: 35px;
+}
+
 .trash-btn:hover {
-    background-image: url('../images/book/trash-hover.svg');
+    fill: red;
 }
 
 .field textarea {
-    max-width: 40%;
-    min-width: 40%;
-    width: 40%;
+    max-width: 100%;
+    min-width: 100%;
+    width: 100%;
     border: 3.5px solid #000;
     border-radius: 7px;
     font-size: 1.35rem;
     padding: 6px;
+}
+
+.disponibility {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+    padding: 0 5%;
+    margin-bottom: 2%;
 }
 
 #disponibilidad {
@@ -207,10 +216,23 @@ input{
     }
 
     .field {
-        flex-direction: column;
+        align-items: center;       
         width: 100%;
         padding: 0 0;
         margin-bottom: 10%;
+
+    }
+
+    .desc-field-group {
+        align-items: center;
+    }
+
+    .author-field-group {
+        align-items: center;
+    }
+    
+    .field-group {
+        align-items: center;
     }
 
     label {
@@ -223,18 +245,6 @@ input{
         height: 8%;
         border: 3px solid #000;
         width: 60%;
-    }
-
-    .author-field-group {
-        flex-direction: column;
-    }
-
-    .desc-field-group {
-        flex-direction: column;
-    }
-
-    .field-group {
-        flex-direction: column;
     }
 
     .field-group input {
