--- a/public/css/book_show.css
+++ b/public/css/book_show.css
@@ -41,6 +41,7 @@ body {
     height: 8%;
     margin-top: 8%;
 }
+
 .available-btn button {
     display: flex;
     justify-content: center;
@@ -54,6 +55,7 @@ body {
     font-weight: bold;
     border: none;
     cursor: pointer;
+    text-transform: uppercase;
 }
 
 .available-btn button:hover {
@@ -225,12 +227,9 @@ body {
     align-items: center;
     color: #ffffff;
     background-color: #ad0f10;
-    width: 100%;
-    height: 100%;
     border-radius: 40px;
     font-size: 1.7rem;
     font-weight: bold;
-    text-decoration: none;
     border: none;
     cursor: pointer;
     padding: 12px 65px;
