--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -8,14 +8,13 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 1.5rem;
-    height: 6rem;
+    padding: 0.3rem 1.5rem;
     box-sizing: border-box;
 }
 
 .topnav img {
-    max-width: 70px;
-    height: auto;
+    max-height: 60px;
+    width: auto;
 }
 
 .topnav form select {
@@ -33,7 +32,7 @@ body {
 }
 
 .topnav .nav-link {
-    font-size: 1.4em;
+    font-size: 1rem;
     font-weight: bold;
 }
 
@@ -79,12 +78,12 @@ body {
     background-color: #181143;
     color: white;
     cursor: pointer;
-    font-size: 1.15rem;
+    font-size: 1rem;
 }
 
 .topnav input[type="text"] {
     flex-grow: 1;
-    font-size: 1.2rem;
+    font-size: 1rem;
     padding: 0.5rem 1rem;
     border: none;
     border-radius: 3rem;
@@ -94,8 +93,8 @@ body {
 .search-container button {
     background: none;
     border: none;
-    border-radius: 3rem;
-    padding: 0;
+    border-radius: 50%;
+    padding: 5px;
     margin-left: 0.5rem;
     cursor: pointer;
 }
