--- a/public/css/book_show.css
+++ b/public/css/book_show.css
@@ -28,7 +28,7 @@ body {
 
 .cover img {
     height: auto;
-    width: 100%;
+    width: 290px;
     box-shadow: 1.5vw 0 15px rgba(0, 0, 0, 0.25);
 }
 
@@ -38,7 +38,6 @@ body {
     justify-content: center;
     align-items: center;
     width: 90%;
-    height: 8%;
     margin-top: 8%;
 }
 
@@ -46,12 +45,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 250px;
+    height: 60px;
     color:#000;
-    height: 100%;
-    width: 100%;
     background-color: #ffbd46;
     border-radius: 40px;
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: bold;
     border: none;
     cursor: pointer;
@@ -70,7 +69,7 @@ body {
     align-items: center;
     width: 90%;
     height: 8%;
-    margin-top: 8%;
+    margin-top: 15%;
 }
 .add-list-btn button {
     display: flex;
@@ -78,10 +77,10 @@ body {
     align-items: center;
     color:#000;
     background-color: #fff;
-    width: 100%;
-    height: 100%;
+    width: 250px;
+    height: 80px;
     border-radius: 40px;
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: bold;
     border: 6px solid #ffbd46;
     cursor: pointer;
@@ -100,7 +99,7 @@ body {
 
 .book-info h1 {
     font-family: "Playfair Display";
-    font-size: 4.5rem;
+    font-size: 4rem;
     font-weight: 450;
 }
 
@@ -123,14 +122,14 @@ body {
 }
 
 .description table th {
-    font-size: 1.9rem;
+    font-size: 1.4rem;
     font-weight: 500;
     text-align: left;
     width: 20%;
 }
 
 .description table td {
-    font-size: 1.9rem;
+    font-size: 1.4rem;
     font-weight: 450;
     text-align: center;
     position: relative;
@@ -143,7 +142,7 @@ body {
 }
 
 .description table .secondary ul li {
-    font-size: 1.9rem;
+    font-size: 1.4rem;
     font-weight: 450;
     display: inline;
     position: relative;
@@ -161,7 +160,7 @@ body {
 }
 
 .this-edition h2 {
-    font-size: 2rem;
+    font-size: 1.6rem;
     font-family: "Playfair Display";
     margin-bottom: 2.5%;
 }
@@ -173,13 +172,13 @@ body {
 
 .this-edition table th {
     text-align: left;
-    font-size: 1.9rem;
+    font-size: 1.4rem;
     font-weight: 500;
-    width: 70%;
+    width: 40%;
 }
 
 .this-edition table td {
-    font-size: 1.9rem;
+    font-size: 1.4rem;
     font-weight: 450;
 }
 
@@ -188,10 +187,10 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 10%;
+    margin-top: 2%;
 }
 .admin-view h2{
-    font-size: 2rem;
+    font-size: 1.7rem;
 }
 
 .admin-btn{
@@ -204,15 +203,14 @@ body {
     align-items: center;
     color:#000;
     background-color: #ffbd46;
-    width: 100%;
-    height: 100%;
+    width: 200px;
+    height: 50px;
     border-radius: 40px;
-    font-size: 1.7rem;
+    font-size: 1.3rem;
     font-weight: bold;
     text-decoration: none;
     border: none;
     cursor: pointer;
-    padding: 12px 65px;
     margin: 20px 20px;
 }
 
@@ -227,12 +225,13 @@ body {
     align-items: center;
     color: #ffffff;
     background-color: #ad0f10;
+    width: 200px;
+    height: 50px;
     border-radius: 40px;
-    font-size: 1.7rem;
+    font-size: 1.3rem;
     font-weight: bold;
     border: none;
     cursor: pointer;
-    padding: 12px 65px;
     margin: 20px 20px;
 }
 
