--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,3 +1,7 @@
+nav {
+    display: none;
+}
+
 body {
     font-family: "DM Sans", sans-serif;
     margin: 0;
@@ -11,6 +15,18 @@ body {
     display: grid;
     grid-template-columns: 40% 60%;
     background-color: #F4F5F5;
+}
+
+.container .logo {
+    position: absolute;
+    margin: 0.3rem 2rem;
+    max-height: 60px;
+    width: 60px;
+}
+
+.container .logo .img {
+    max-height: 60px;
+    max-width: 60px;
 }
 
 section {
