--- a/public/css/loan_view.css
+++ b/public/css/loan_view.css
@@ -99,19 +99,87 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #f5f5dc;
-    width: 400px;
-    height: 200px;
+    background-color: #d8ecf9;
     border-radius: 25px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: -10px 10px 0px 0px #82A1B8;
+}
+
+.loan-confirmation-content h1 {
+    font-size: 2rem;
 }
 
 .loan-confirmation-content p {
     font-size: 1.2rem;
+    line-height: 1.3;
+    text-align: center;
+}
+
+.loan-confirmation-content p span {
+    font-weight: 700;
+}
+
+#loan-request-confirmation {
+    width: 800px;
+    height: 400px;
+}
+
+#loan-request-confirmation button {
+    width: 400px;
+    height: 60px;
+    color: #ffffff;
+    background-color: #181143;
+    font-size: 1.5rem;
+    font-weight: 500;
+    border: none;
+    border-radius: 30px;
+    margin-top: 30px;
+    cursor: pointer;
+}
+
+#loan-request-confirmation button:hover {
+    background-color: #2e2858;
+}
+
+.loan-separator {
+    height: 3px;
+    width: 80%;
+    background-color: #181143;
+    margin-bottom: 15px;
+}
+
+#loan-request-sended {
+    width: 650px;
+    height: 300px;
+}
+
+#loan-request-sended p {
+    margin-bottom: 30px;
 }
 
 @media screen and (max-width: 815px){
     .loan-section {
         display: block;
     }
+}
+
+/*Laptop*/
+@media (min-width: 900px) and (max-width: 1280px) and (orientation: landscape) {
+}
+
+/*Tablet*/
+/*Vertical*/
+@media (min-width: 481px) and (max-width: 1240px) and (orientation: portrait) {
+}
+
+/*Horizontal*/
+@media (min-height: 481px) and (max-height: 899px) and (orientation: landscape) {
+}
+
+/*Celulares*/
+/*Vertical*/
+@media (max-width: 480px) and (orientation: portrait) {
+}
+
+/*Horizontal*/
+@media (max-height: 480px) and (orientation: landscape) {
 }
