--- a/public/css/login.css
+++ b/public/css/login.css
@@ -19,7 +19,8 @@ body {
 
 .container .logo {
     position: absolute;
-    margin: 0.3rem 2rem;
+    left: 30px;
+    top: 10px;
     max-height: 60px;
     width: 60px;
 }
@@ -81,7 +82,7 @@ section {
 
 .user-login input{
     font-size: 1.2rem;
-    padding: 8px 8px;
+    padding: 8px;
     width: 95%;
     border: 3px solid #000;
     border-radius: 7px;
@@ -168,9 +169,11 @@ select:required:invalid {
     display: flex;
     justify-content: center;
     align-items: center;
+    box-sizing: border-box;
     color:#000;
     background-color: #9bb3e8;
-    padding: 2.5% 6%;
+    width: 225px;
+    height: 60px;
     margin: 50px auto;
     border-radius: 40px;
     font-size: 1.5rem;
@@ -197,7 +200,14 @@ select:required:invalid {
 }
 
 
-@media (max-width: 1024px) {
+/*Laptop*/
+@media (min-width: 900px) and (max-width: 1280px) and (orientation: landscape) {
+}
+
+
+/*Tablet*/
+/*Vertical*/
+@media (min-width: 481px) and (max-width: 1240px) and (orientation: portrait) {
     .main {
         box-shadow: none;
     }
@@ -206,6 +216,10 @@ select:required:invalid {
         justify-content: center;
         align-items: center;
         background-color: #ffffff;
+    }
+
+    .container .logo {
+        left: 10px;
     }
 
     .loginbox {
@@ -219,10 +233,74 @@ select:required:invalid {
     .user-login input{
         font-size: 1.5rem;
         border: 3px solid black;
+        padding: 10px;
     }
     
     .user-login input::placeholder{
         font-size: 1.5rem;
+    }
+
+    .remember {
+        font-size: 1.3rem;
+    }
+    
+    .login-btn button{
+        font-size: 1.5rem;
+        font-weight: bold;
+        border: 2px solid #000;
+    }
+    
+    .forgot {
+        font-size: 1.3rem;
+        margin-bottom: 10px;
+    }
+    
+    .signup {
+        font-size: 1.3rem;
+    }
+
+    .side {
+        display: none;
+    }
+}
+/*Horizontal*/
+@media (min-height: 481px) and (max-height: 899px) and (orientation: landscape) {
+}
+
+/*Celulares*/
+/*Vertical*/
+@media (max-width: 480px) and (orientation: portrait) {
+    .main {
+        box-shadow: none;
+    }
+    .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #ffffff;
+    }
+
+    .container .logo {
+        left: 10px;
+    }
+
+    .loginbox {
+        width: 90%;
+    }
+
+    .loginbox h1{
+        font-size: 2.5rem
+    }
+    
+    .user-login input{
+        width: 80%;
+        font-size: 1.3rem;
+        border: 3px solid black;
+        padding: 5px;
+    }
+    
+    .user-login input::placeholder{
+        font-size: 1.3rem;
     }
 
     .remember {
@@ -246,5 +324,33 @@ select:required:invalid {
 
     .side {
         display: none;
+    }
+}
+
+/*Horizontal*/
+@media (max-height: 480px) and (orientation: landscape) {
+    .loginbox h1{
+        font-size: 2rem
+    }
+    
+    .user-login input{
+        font-size: 1rem;
+        border: 3px solid black;
+        width: 75%;
+        padding: 5px;
+    }
+    
+    .user-login input::placeholder{
+        font-size: 1rem;
+    }
+
+    .remember {
+        font-size: 1.2rem;
+        margin-left: 13%;
+    }
+
+    .login-btn button{
+        height: 45px;
+        margin: 10px auto;
     }
 }
